[gd_scene load_steps=7 format=3 uid="uid://4ic7e2pq6rm1"]

[ext_resource type="Script" path="res://scripts/wind_effect.gd" id="1_jekp7"]
[ext_resource type="Texture2D" uid="uid://cirv7s666vyqf" path="res://arts/spritesheets/effects/Retro Impact Effect Pack 2 F.png" id="2_uxyll"]

[sub_resource type="Animation" id="Animation_fj1g7"]
length = 0.001

[sub_resource type="Animation" id="Animation_7e2tc"]
resource_name = "wind_twister"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [155, 156, 157, 158, 155, 156, 157]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mt83h"]
_data = {
"RESET": SubResource("Animation_fj1g7"),
"wind_twister": SubResource("Animation_7e2tc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1ucnw"]
radius = 67.0075

[node name="wind_effect" type="Node2D"]
script = ExtResource("1_jekp7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_uxyll")
hframes = 10
vframes = 18
frame = 155

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mt83h")
}
autoplay = "wind_twister"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1ucnw")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
